Add CreditsScroll component and update App to include it

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+:root {
+    background-color: black;
+    font-family: helvetica, sans-serif;
+    letter-spacing: 0.03rem;
+    font-weight: lighter;
+}
