--- a/src/components/pages/os/OS.module.scss
+++ b/src/components/pages/os/OS.module.scss
@@ -4,6 +4,19 @@
   padding: 2% 4% 4% 4%;
   display: flex;
   flex-direction: column;
+  background-color: #d1cdb7;
+  background-size: 0.3rem 0.3rem;
+  background-image: linear-gradient(to right, #ccc8b1 1px, rgba(204, 200, 177, 0) 1px), linear-gradient(to bottom, #ccc8b1 1px, rgba(204, 200, 177, 0) 1px);
+  position: absolute;
+  overflow-x: hidden;
+  overflow-y: hidden;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+
+  font-family: helvetica, sans-serif;
+  letter-spacing: 0.03rem;
+  font-weight: lighter;
+  margin: 0;
 
   hr {
     margin-top: 2em;
@@ -27,28 +40,6 @@
     background-size: 80px 4px;
     background-repeat: repeat-x;
   }
-
-  body {
-    width: 100vw;
-    height: 100vh;
-    margin: 0;
-    font-family: 'Manrope', sans-serif;
-    font-weight: 400;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    background-color: #d1cdb7;
-    background-size: 0.3rem 0.3rem;
-    background-image: linear-gradient(to right, #ccc8b1 1px, rgba(204, 200, 177, 0) 1px), linear-gradient(to bottom, #ccc8b1 1px, rgba(204, 200, 177, 0) 1px);
-    position: absolute;
-    overflow-x: hidden;
-    overflow-y: hidden;
-  }
-
-  code {
-    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-  }
-
 
   * {
     box-sizing: border-box;
