--- a/src/components/uiElements/osInterface/NavBar/Navbar.module.scss
+++ b/src/components/uiElements/osInterface/NavBar/Navbar.module.scss
@@ -2,7 +2,9 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  font-family: 'Manrope', sans-serif;
+  font-family: helvetica, sans-serif;
+  letter-spacing: 0.03rem;
+  font-weight: lighter;
 
   hr {
     margin-top: 2.2em;
