--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
 @tailwind utilities;
 
 :root {
+    background-color: black;
     font-family: helvetica, sans-serif;
     letter-spacing: 0.03rem;
     font-weight: lighter;
