--- a/src/components/uiElements/button/NierButton.css
+++ b/src/components/uiElements/button/NierButton.css
@@ -16,8 +16,9 @@ button:disabled,
     color: #bab5a1;
     cursor: not-allowed;
 }
+
 button:not(:disabled),
-.button {
+button {
     padding: 0.5rem;
     font-size: 1em;
     border: none;
@@ -45,11 +46,13 @@ button:not(:disabled),
     position: relative;
     z-index: 1;
 }
+
 button:not(:disabled):hover,
 .button:hover {
-        /*-webkit-box-shadow: 0.2em 0.2em 0.1em 0 #bab5a1;*/
-        /*box-shadow: 0.2em 0.2em 0.1em 0 #bab5a1;*/
+    /*-webkit-box-shadow: 0.2em 0.2em 0.1em 0 #bab5a1;*/
+    /*box-shadow: 0.2em 0.2em 0.1em 0 #bab5a1;*/
 }
+
 button:not(:disabled):before,
 .button:before {
     content: '';
@@ -64,6 +67,7 @@ button:not(:disabled):before,
     left: 0;
     right: 0;
 }
+
 button:not(:disabled):after,
 .button:after {
     content: '';
@@ -85,11 +89,13 @@ button:not(:disabled):after,
     background-color: #454138;
     z-index: -1;
 }
+
 button:not(:disabled):hover,
 .button:hover {
     background-color: transparent;
     color: #dcd8c0;
 }
+
 button:not(:disabled):hover:before,
 .button:hover:before {
     top: -0.2rem;
@@ -97,14 +103,17 @@ button:not(:disabled):hover:before,
     border: solid #454138;
     border-width: 0.1rem 0;
 }
+
 button:not(:disabled):hover:after,
 .button:hover:after {
     width: 100%;
 }
+
 button:not(:disabled):active,
 .button:active {
     color: #454138;
 }
+
 button:not(:disabled):active:after,
 .button:active:after {
     background-color: #dcd8c0;
