--- a/src/components/uiElements/osInterface/NavBar/Navbar.module.scss
+++ b/src/components/uiElements/osInterface/NavBar/Navbar.module.scss
@@ -35,7 +35,8 @@
     gap: 2rem;
     width: 100%;
     position: relative;
-    height: 2.5rem;
+    // i hate math so much
+    height: 2.89em;
 
     .nav {
       width: 100%;
