--- a/src/components/pages/os/OS.module.scss
+++ b/src/components/pages/os/OS.module.scss
@@ -15,7 +15,7 @@
 
   font-family: helvetica, sans-serif;
   letter-spacing: 0.03rem;
-  font-weight: lighter;
+  font-weight: bold;
   margin: 0;
 
   hr {
@@ -56,8 +56,5 @@
     letter-spacing: 0.03rem;
     font-weight: lighter;
     margin: 0;
-  }
-
-  * {
   }
 }
