--- a/src/index.css
+++ b/src/index.css
@@ -8,3 +8,15 @@
     letter-spacing: 0.03rem;
     font-weight: lighter;
 }
+
+body::before {
+    content: '';
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+    background: radial-gradient(circle, transparent, rgba(0, 0, 0, 0.4));
+    z-index: 9999;
+}
